fix displaying of data in modals